Update stylesheet to fix publications image on small screens. Update index page bio content.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -463,7 +463,8 @@ footer {
 				padding-left: 0;
 				margin-top: 0;
 				clip-path: xywh(0 10% 100% 70%);
-				translate: 0;			
+				translate: 0;
+				max-width: 70%; /* ensures wide images have same width as default images */
 				}
 	.publication_right {
 				float: left;
